--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-붕괴3rd 앙증 함대 강적 결과 자동 기록 프로그램
+# 붕괴3rd 앙증 함대 강적 결과 자동 기록 프로그램
 
 Python 3.6
 이미지 1920 * 810 사이즈에서만 작동
@@ -6,7 +6,7 @@ Python 3.6
 2019.03.30.
 
 
--- run
+## run
 
 1. pip3 install -r requirements.txt
 2. n_participate.txt 파일에 오늘 강적 친 인원수 기입
@@ -16,7 +16,7 @@ Python 3.6
 6. autokey.py 실행
 
 
--- output
+## output
 
 images_result/{오늘날짜}/ 경로에 위치
 
@@ -27,7 +27,7 @@ images_result/{오늘날짜}/ 경로에 위치
 4. {오늘날짜}_강적결과 - 보여주기용. 오늘 강적 결과
 
 
--- To do
+## To do
 
 1. 데미지 표기되게 바꾸기. {데미지} / 0 / -1 세가지로 구분 되게 변경.
 2. 마우스 움직임을 통해 자동 스샷 찍기 구현.
